<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".controller.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="144dp">

            <EditText
                android:id="@+id/deviceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/device_name"
                android:importantForAutofill="no"
                android:inputType="text" />


            <TextView
                android:id="@+id/device_type_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_type" />

            <!--        // todo: See the correct way to implement Spinners, that is not working-->
            <!--        <Spinner-->
            <!--            android:id="@+id/device_type"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:entries="@array/devices_array" />-->
            <EditText
                android:id="@+id/device_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Smart Phone / Smart Watch / Laptop"
                android:inputType="text" />

            <TextView
                android:id="@+id/cpu_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cpu" />

            <EditText
                android:id="@+id/cpu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cpu_hint"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:id="@+id/ram_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ram" />

            <EditText
                android:id="@+id/ram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ram_hint"
                android:importantForAutofill="no"
                android:inputType="number" />

            <TextView
                android:id="@+id/screen_size_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/screen_size" />

            <EditText
                android:id="@+id/screen_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/screen_size_hint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/resolution_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resolution" />

            <EditText
                android:id="@+id/resolution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/resolution_hint"
                android:importantForAutofill="no"
                android:inputType="textVisiblePassword"
                android:digits="0123456789x"/>

            <TextView
                android:id="@+id/battery_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/battery" />

            <EditText
                android:id="@+id/battery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/battery_hint"
                android:importantForAutofill="no"
                android:inputType="number" />

            <TextView
                android:id="@+id/price_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/price_hint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/back_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/back" />

                <Button
                    android:id="@+id/add_new_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_device" />

                <Button
                    android:id="@+id/upload_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/upload" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>